fix busqueda header